--- a/app.yaml
+++ b/app.yaml
@@ -11,6 +11,10 @@ handlers:
   upload: .+\.(gif|png|jpg)$
   
 # Serve your app through a front controller at index.php or public/index.php.
+- url: /(.+\.php)$
+  static_files: static/\1
+  upload: /(.+\.php)$
+
 - url: .*
   script: auto
   secure: always
